# android-openssl-build

./: README.md  Setenv-android-input.sh  compile-openssl-android.sh
openssl-1.0.2p/: Makefile  Makefile.bak
openssl-1.0.2p/tools/: c_rehash
openssl_change/: Configure
result/arm64-v8a/include/openssl/: opensslconf.h
result/armeabi-v7a/include/openssl/: opensslconf.h
result/mip/include/openssl/: opensslconf.h
result/mip_64/include/openssl/: opensslconf.h
result/x86/include/openssl/: opensslconf.h
result/x86_64/include/openssl/: opensslconf.h
testJniOpenssl/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
testJniOpenssl/app/src/androidTest/java/com/example/blt/testjniopenssl/: ExampleInstrumentedTest.java
testJniOpenssl/app/src/main/: AndroidManifest.xml
testJniOpenssl/app/src/main/cpp/: native-lib.cpp  openssl-jni.c
testJniOpenssl/app/src/main/java/com/example/blt/testjniopenssl/: MainActivity.java  OpensslJni.java
testJniOpenssl/app/src/main/res/layout/: activity_main.xml
testJniOpenssl/app/src/main/res/values/: strings.xml  styles.xml
testJniOpenssl/app/src/test/java/com/example/blt/testjniopenssl/: ExampleUnitTest.java
